# razerCommander

./: .gitignore  Makefile.am  README.md  confFileManager.py  configure.ac  custom_kb_builder.py  custom_keyboard.py  custom_profiles.py  device.py  devicesMacroKeys.py  index.html  kblayouts.py  listboxHelper.py  macro_logic.py  main.py  meson.build  org.gabmus.razercommander.json  razercommander.desktop.in  razercommanderbackdrop.webm  razercommandershow.webm  style.html  tartarus.py  todo.txt  ui.glade
bower_components/iron-flex-layout/: .bower.json
bower_components/polymer/: .bower.json
data/: Makefile.am  meson.build  org.gabmus.razercommander.appdata.xml  org.gabmus.razercommander.appdata.xml.in  org.gabmus.razercommander.desktop.in.in  org.gabmus.razercommander.gresource.xml  org.gabmus.razercommander.gschema.xml  org.gabmus.razercommander.service.desktop  org.gabmus.razercommander.service.in
data/ui/: #ui.glade#  ui.glade
debian/: changelog  control  copyright  rules  watch
m4/: libtool.m4
razercommander/: Makefile.am  __main__.py  confFileManager.py  custom_kb_builder.py  custom_keyboard.py  custom_profiles.py  device.py  devicesMacroKeys.py  kblayouts.py  macro_logic.py  ui.glade
scripts/: build_flatpak.py  meson_post_install.py
