appdir = $(pythondir)/razercommander/
app_PYTHON = \
	__main__.py \
	ui.glade \
	icon.svg \
	confFileManager.py \
	custom_kb_builder.py \
	custom_keyboard.py \
	custom_profiles.py \
	device.py \
	devicesMacroKeys.py \
	kblayouts.py \
	listboxHelper.py \
	macro_logic.py \
	img/Breath.svg \
	img/bwchroma.svg \
	img/Custom.svg \
	img/gameModeOff.svg \
	img/gameModeOn.svg \
	img/nagahexv2.svg \
	img/None.svg \
	img/orbweaver.svg \
	img/Razer\ BlackWidow\ Chroma.svg \
	img/Razer\ Naga\ Hex\ V2.svg \
	img/Razer\ Orbweaver\ Chroma.svg \
	img/Razer\ Orbweaver.svg \
	img/Razer\ Tartarus\ Chroma.svg \
	img/Razer\ Tartarus.svg \
	img/Reactive.svg \
	img/Ripple.svg \
	img/Spectrum.svg \
	img/Starlight.svg \
	img/Static.svg \
	img/tartarus_backup.svg \
	img/tartarus.svg \
	img/Wave.svg

-include $(top_srcdir)/git.mk
